Simple neural network up and running

--- a/simple_NeuraNetwork.ipynb
+++ b/simple_NeuraNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnd9jYS0VFinlyPFsh6hN2",
+      "authorship_tag": "ABX9TyN1066aekU8Sda+Na5fzmsU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 47,
       "metadata": {
         "id": "ICjzbSkcnoqC"
       },
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "OV_erWV_qfEB"
       },
-      "execution_count": 77,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "hsBmP_a-sd8q"
       },
-      "execution_count": 78,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "qWaGiGcWtkc-"
       },
-      "execution_count": 79,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "wj13etqEwptV"
       },
-      "execution_count": 80,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -116,9 +116,9 @@
           "height": 423
         },
         "id": "NnmAyrPkxKEH",
-        "outputId": "5e66adf2-e891-41ac-d761-f78b897d08b9"
+        "outputId": "82765809-790b-4beb-cf4b-a874a3c70c62"
       },
-      "execution_count": 81,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-610d8fc0-0e3d-46ee-a698-668ba80c7791\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7c9601e2-9da0-4efb-88cf-fe89b66a091c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +263,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-610d8fc0-0e3d-46ee-a698-668ba80c7791')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7c9601e2-9da0-4efb-88cf-fe89b66a091c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +315,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-610d8fc0-0e3d-46ee-a698-668ba80c7791 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7c9601e2-9da0-4efb-88cf-fe89b66a091c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-610d8fc0-0e3d-46ee-a698-668ba80c7791');\n",
+              "        const element = document.querySelector('#df-7c9601e2-9da0-4efb-88cf-fe89b66a091c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +340,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-95745d8f-5f7e-455b-b9fe-adefc063ca22\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95745d8f-5f7e-455b-b9fe-adefc063ca22')\"\n",
+              "<div id=\"df-ad9b9127-cd90-4022-9609-3c9384dd2501\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ad9b9127-cd90-4022-9609-3c9384dd2501')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,7 +460,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-95745d8f-5f7e-455b-b9fe-adefc063ca22 button');\n",
+              "        document.querySelector('#df-ad9b9127-cd90-4022-9609-3c9384dd2501 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -476,7 +476,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 52
         }
       ]
     },
@@ -491,9 +491,9 @@
           "height": 206
         },
         "id": "LZsIPSMVxMLZ",
-        "outputId": "667e19d0-f194-4735-9a7c-1177e4bef4d1"
+        "outputId": "cbdf8372-adbb-41cd-c9d0-a15f3d479943"
       },
-      "execution_count": 82,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-655073dd-f2bf-4c52-ad3d-e93104c3c871\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-97e75331-fa7b-4c04-8c0f-a50cb949abc3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -581,7 +581,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-655073dd-f2bf-4c52-ad3d-e93104c3c871')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97e75331-fa7b-4c04-8c0f-a50cb949abc3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -633,12 +633,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-655073dd-f2bf-4c52-ad3d-e93104c3c871 button.colab-df-convert');\n",
+              "        document.querySelector('#df-97e75331-fa7b-4c04-8c0f-a50cb949abc3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-655073dd-f2bf-4c52-ad3d-e93104c3c871');\n",
+              "        const element = document.querySelector('#df-97e75331-fa7b-4c04-8c0f-a50cb949abc3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -658,8 +658,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0d24a7fb-3c6b-4ebf-88c0-7e1daae618f7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0d24a7fb-3c6b-4ebf-88c0-7e1daae618f7')\"\n",
+              "<div id=\"df-2a187126-1eee-41fc-b453-5322a0faf2ee\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2a187126-1eee-41fc-b453-5322a0faf2ee')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -778,7 +778,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0d24a7fb-3c6b-4ebf-88c0-7e1daae618f7 button');\n",
+              "        document.querySelector('#df-2a187126-1eee-41fc-b453-5322a0faf2ee button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -793,7 +793,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 53
         }
       ]
     },
@@ -812,9 +812,9 @@
           "height": 423
         },
         "id": "1lY7JTObxUbS",
-        "outputId": "89d6b044-a968-4d29-af45-e33b31a01462"
+        "outputId": "40304e88-739e-46a7-b486-4ee05b85570f"
       },
-      "execution_count": 83,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +837,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d96be3a1-4039-447b-bfc7-564ddeb2f671\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-afeda847-1186-4391-b229-85af5c46145b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -959,7 +959,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d96be3a1-4039-447b-bfc7-564ddeb2f671')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-afeda847-1186-4391-b229-85af5c46145b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1011,12 +1011,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d96be3a1-4039-447b-bfc7-564ddeb2f671 button.colab-df-convert');\n",
+              "        document.querySelector('#df-afeda847-1186-4391-b229-85af5c46145b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d96be3a1-4039-447b-bfc7-564ddeb2f671');\n",
+              "        const element = document.querySelector('#df-afeda847-1186-4391-b229-85af5c46145b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1036,8 +1036,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0494b2b9-f073-47a7-9fcd-90fd96282040\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0494b2b9-f073-47a7-9fcd-90fd96282040')\"\n",
+              "<div id=\"df-f4640416-266c-499f-bb8d-de5cdddb3f05\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f4640416-266c-499f-bb8d-de5cdddb3f05')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1156,7 +1156,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0494b2b9-f073-47a7-9fcd-90fd96282040 button');\n",
+              "        document.querySelector('#df-f4640416-266c-499f-bb8d-de5cdddb3f05 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1172,7 +1172,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 54
         }
       ]
     },
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "VGw-e2sCx0Zn"
       },
-      "execution_count": 84,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1199,7 +1199,7 @@
       "metadata": {
         "id": "kx8POEszyz2j"
       },
-      "execution_count": 85,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1210,7 +1210,7 @@
       "metadata": {
         "id": "BsYLOLVA0dWV"
       },
-      "execution_count": 86,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1222,7 +1222,7 @@
       "metadata": {
         "id": "TQc7Daim08gA"
       },
-      "execution_count": 87,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1235,7 +1235,7 @@
       "metadata": {
         "id": "TQSN3HuM1pi8"
       },
-      "execution_count": 88,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -1248,7 +1248,7 @@
       "metadata": {
         "id": "z2TSH30a2Ct9"
       },
-      "execution_count": 89,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -1262,7 +1262,7 @@
       "metadata": {
         "id": "lgGPk3mP2Xrq"
       },
-      "execution_count": 90,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -1287,8 +1287,8 @@
         "    print(f'Epoch: {i} and loss: {loss}')\n",
         "\n",
         "\n",
-        "  # Do some back propagation : take the error rate of forward propagation and feed it back\n",
-        "  # thru the network to fine tune the weights\n",
+        "  # Do some back propagation : take the error rate of forward propagation and\n",
+        "   # feed it back thru the network to fine tune the weights\n",
         "  optimizer.zero_grad()\n",
         "  loss.backward()\n",
         "  optimizer.step()"
@@ -1298,9 +1298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QKi194Nl3uCx",
-        "outputId": "b5304ee1-f5f8-4040-9e3c-478fe0bb99e5"
+        "outputId": "2d501abd-cd9f-4c8a-b76b-7957e39370bc"
       },
-      "execution_count": 91,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,9 +1334,9 @@
           "height": 466
         },
         "id": "I5Eodu9W3w1A",
-        "outputId": "6c3c05e9-2773-45f9-f58c-3e7547c541ae"
+        "outputId": "5ab92747-f72d-4364-9bc3-b9d4165562d3"
       },
-      "execution_count": 92,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1346,7 +1346,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 63
         },
         {
           "output_type": "display_data",
@@ -1362,11 +1362,123 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Evaluate Model on Test data set (Validata model on tesst seet)\n",
+        "with torch .no_grad(): #Basically turn off back propogation\n",
+        "  y_eval = model.forward(x_test)  # x_test are features from our test set ,y_eval will be prediction\n",
+        "  loss = criterion(y_eval, y_test) # Find the loss or error"
+      ],
       "metadata": {
         "id": "q4drMNvb7qbO"
       },
-      "execution_count": 92,
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BbqolALmJOBC",
+        "outputId": "c5241b04-ff6c-47fa-ed26-e394562006a5"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.1315)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correct = 0\n",
+        "with torch.no_grad():\n",
+        "  for i,data in enumerate(x_test):\n",
+        "    y_eval = model.forward(data)\n",
+        "\n",
+        "    if y_test[i] == 0:\n",
+        "      x = \"setosa\"\n",
+        "    elif y_test[i] == 1:\n",
+        "      x = \"versicolor\"\n",
+        "    else:\n",
+        "      x = \"virginica\"\n",
+        "\n",
+        "    # will tell us what type of flower class our network it is\n",
+        "    print(f'{i+1}.)  {str(y_eval)} \\t {y_test[i]} \\t {y_eval.argmax().item()}')\n",
+        "\n",
+        "    # correct or not\n",
+        "    if y_eval.argmax().item() == y_test[i]:\n",
+        "      correct+=1\n",
+        "\n",
+        "print(f'We got {correct} correct!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ayp6G_wFJPrv",
+        "outputId": "19afde39-8831-4953-e1e0-502876da27c3"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.)  tensor([-5.8760,  4.4628,  6.5124]) \t 2 \t 2\n",
+            "2.)  tensor([-7.5436,  4.1670,  9.7255]) \t 2 \t 2\n",
+            "3.)  tensor([-8.4504,  5.1271, 10.1987]) \t 2 \t 2\n",
+            "4.)  tensor([-4.3398,  5.6267,  2.5608]) \t 1 \t 1\n",
+            "5.)  tensor([-7.1825,  4.8754,  8.2992]) \t 2 \t 2\n",
+            "6.)  tensor([-3.3974,  5.3463,  1.2803]) \t 1 \t 1\n",
+            "7.)  tensor([-5.9231,  4.9822,  5.9997]) \t 2 \t 2\n",
+            "8.)  tensor([-4.2881,  5.7003,  2.3889]) \t 1 \t 1\n",
+            "9.)  tensor([-6.5356,  4.9257,  7.1260]) \t 2 \t 2\n",
+            "10.)  tensor([-8.0509,  4.4129, 10.3286]) \t 2 \t 2\n",
+            "11.)  tensor([-5.6762,  4.9500,  5.6215]) \t 2 \t 2\n",
+            "12.)  tensor([ 4.5662, -2.2476, -2.8911]) \t 0 \t 0\n",
+            "13.)  tensor([ 4.2571, -1.9967, -2.7330]) \t 0 \t 0\n",
+            "14.)  tensor([-2.1108,  4.0515,  0.5799]) \t 1 \t 1\n",
+            "15.)  tensor([ 3.4575, -1.2098, -2.3514]) \t 0 \t 0\n",
+            "16.)  tensor([-5.4724,  5.1165,  5.0934]) \t 2 \t 1\n",
+            "17.)  tensor([ 4.0557, -1.7949, -2.6492]) \t 0 \t 0\n",
+            "18.)  tensor([-5.8075,  4.6053,  6.2458]) \t 1 \t 2\n",
+            "19.)  tensor([ 4.4343, -2.1392, -2.8242]) \t 0 \t 0\n",
+            "20.)  tensor([ 3.4528, -1.2514, -2.3660]) \t 0 \t 0\n",
+            "21.)  tensor([-2.6189,  4.5619,  0.8574]) \t 1 \t 1\n",
+            "22.)  tensor([-7.7412,  4.7377,  9.4199]) \t 2 \t 2\n",
+            "23.)  tensor([ 3.5744, -1.3221, -2.4135]) \t 0 \t 0\n",
+            "24.)  tensor([ 4.5365, -2.2383, -2.8684]) \t 0 \t 0\n",
+            "25.)  tensor([-2.6579,  4.6177,  0.8823]) \t 1 \t 1\n",
+            "26.)  tensor([-3.2865,  5.2229,  1.2164]) \t 1 \t 1\n",
+            "27.)  tensor([-4.6514,  5.7776,  2.9273]) \t 1 \t 1\n",
+            "28.)  tensor([-2.9464,  4.8892,  1.0379]) \t 1 \t 1\n",
+            "29.)  tensor([ 4.5847, -2.2687, -2.8974]) \t 0 \t 0\n",
+            "30.)  tensor([-4.5784,  5.4554,  3.1660]) \t 1 \t 1\n",
+            "We got 28 correct!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DrJOfbtFKP-F"
+      },
+      "execution_count": 66,
       "outputs": []
     }
   ]
