Simple neural network up and running

--- a/simple_NeuraNetwork.ipynb
+++ b/simple_NeuraNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1066aekU8Sda+Na5fzmsU",
+      "authorship_tag": "ABX9TyO7xcuekyWsRBQDZkGHoKtS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "ICjzbSkcnoqC"
       },
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "OV_erWV_qfEB"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "hsBmP_a-sd8q"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "qWaGiGcWtkc-"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "wj13etqEwptV"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "id": "NnmAyrPkxKEH",
         "outputId": "82765809-790b-4beb-cf4b-a874a3c70c62"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
         "id": "LZsIPSMVxMLZ",
         "outputId": "cbdf8372-adbb-41cd-c9d0-a15f3d479943"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +814,7 @@
         "id": "1lY7JTObxUbS",
         "outputId": "40304e88-739e-46a7-b486-4ee05b85570f"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "VGw-e2sCx0Zn"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,7 +1199,7 @@
       "metadata": {
         "id": "kx8POEszyz2j"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1210,7 +1210,7 @@
       "metadata": {
         "id": "BsYLOLVA0dWV"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1222,7 +1222,7 @@
       "metadata": {
         "id": "TQc7Daim08gA"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1235,7 +1235,7 @@
       "metadata": {
         "id": "TQSN3HuM1pi8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1248,7 +1248,7 @@
       "metadata": {
         "id": "z2TSH30a2Ct9"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1262,7 +1262,7 @@
       "metadata": {
         "id": "lgGPk3mP2Xrq"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1300,7 +1300,7 @@
         "id": "QKi194Nl3uCx",
         "outputId": "2d501abd-cd9f-4c8a-b76b-7957e39370bc"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1336,7 +1336,7 @@
         "id": "I5Eodu9W3w1A",
         "outputId": "5ab92747-f72d-4364-9bc3-b9d4165562d3"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1371,7 +1371,7 @@
       "metadata": {
         "id": "q4drMNvb7qbO"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1386,7 +1386,7 @@
         "id": "BbqolALmJOBC",
         "outputId": "c5241b04-ff6c-47fa-ed26-e394562006a5"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1431,7 +1431,7 @@
         "id": "Ayp6G_wFJPrv",
         "outputId": "19afde39-8831-4953-e1e0-502876da27c3"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,11 +1474,152 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "new_iris = torch.tensor([4.7,3.2,1.3,0.2])"
+      ],
       "metadata": {
         "id": "DrJOfbtFKP-F"
       },
-      "execution_count": 66,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  print(model(new_iris))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OCBlGc6xNhya",
+        "outputId": "2613ef1e-7deb-498f-a41b-06b456719c01"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 3.4374, -1.2075, -2.3490])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "newer_iris = torch.tensor([5.9,3.0,5.1,1.8])"
+      ],
+      "metadata": {
+        "id": "EZouCMx3N1y1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  print(model(newer_iris))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UX70abVHOA0k",
+        "outputId": "eb0fa982-c913-43bf-ee50-1ff98140058b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([-5.9944,  4.5077,  6.6792])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save our NN Model\n",
+        "torch.save(model.state_dict(), 'my_really_awesome_iris_model.pt')\n"
+      ],
+      "metadata": {
+        "id": "V82b-95mOIC2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load the  Saved Model\n",
+        "new_model =Model()\n",
+        "new_model.load_state_dict(torch.load('my_really_awesome_iris_model.pt'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SRkLQt1fP2TZ",
+        "outputId": "55bd40ff-5103-4f5b-a7cc-ed0e3779cc6e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# make sure it loaded correctly\n",
+        "new_model.eval()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ub_gcNvPQTs2",
+        "outputId": "9aa844de-862d-4e91-bfdd-94577f5c63a6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Model(\n",
+              "  (fc1): Linear(in_features=4, out_features=8, bias=True)\n",
+              "  (fc2): Linear(in_features=8, out_features=9, bias=True)\n",
+              "  (out): Linear(in_features=9, out_features=3, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Cx_U79uoQcJL"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
